Fixed bug #68199 (PDO::pgsqlGetNotify doesn't support NOTIFY payloads)